--- a/hecate-persist/pom.xml
+++ b/hecate-persist/pom.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.chaos.hecate</groupId>
-    <artifactId>hecate-root</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>hecate-persist</artifactId>
-  <name>hecate-persist</name>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.chaos.hecate</groupId>
+		<artifactId>hecate-root</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>hecate-persist</artifactId>
+	<name>hecate-persist</name>
 
 
-  <dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.2</version>
+		</dependency>
 
-
-  </dependencies>
+	</dependencies>
 </project>
