--- a/hecate-service/pom.xml
+++ b/hecate-service/pom.xml
@@ -1,28 +1,88 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.chaos.hecate</groupId>
-    <artifactId>hecate-root</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>hecate-service</artifactId>
-  <packaging>war</packaging>
-  <name>hecate-service</name>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.chaos.hecate</groupId>
+		<artifactId>hecate-root</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>hecate-service</artifactId>
+	<packaging>war</packaging>
+	<name>hecate-service</name>
 
 
-  <dependencies>
-    <dependency>  
-      <groupId>com.chaos.hecate</groupId>  
-      <artifactId>hecate-persist</artifactId>  
-      <version>${project.version}</version>  
-    </dependency>  
+	<dependencies>
+		<dependency>
+			<groupId>com.chaos.hecate</groupId>
+			<artifactId>hecate-persist</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
-    <dependency>  
-      <groupId>com.chaos.hecate</groupId>  
-      <artifactId>hecate-utils</artifactId>  
-      <version>${project.version}</version>  
-    </dependency>  
-  </dependencies>
+		<dependency>
+			<groupId>com.chaos.hecate</groupId>
+			<artifactId>hecate-utils</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-all</artifactId>
+			<version>5.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.51</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>3.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>3.2.5.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+	</dependencies>
 </project>
