--- a/hecate-service/pom.xml
+++ b/hecate-service/pom.xml
@@ -85,4 +85,19 @@
 			<version>1.3.1</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<finalName>hecate</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>utf8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
