--- a/hecate-service/src/main/webapp/WEB-INF/web.xml
+++ b/hecate-service/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
+			classpath*:/applicationContext-service.xml
+ 			classpath*:/applicationContext-persist.xml
 		</param-value>
 	</context-param>
 
