--- a/hecate-persist/pom.xml
+++ b/hecate-persist/pom.xml
@@ -14,6 +14,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.chaos.hecate</groupId>
+			<artifactId>hecate-utils</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
 			<version>2.2</version>
