--- a/hecate-persist/src/test/resources/config.properties
+++ b/hecate-persist/src/test/resources/config.properties
@@ -5,7 +5,7 @@
 #数据库连接信息
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:13307/hecate?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8
-jdbc.url=jdbc:mysql://http://120.24.65.207/:13307/hecate?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://120.24.65.207:13307/hecate?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8
 jdbc.username=bowen
 jdbc.password=Bowen!@#123
 jdbc.schema=public
