--- a/hecate-persist/src/test/resources/log4j.properties
+++ b/hecate-persist/src/test/resources/log4j.properties
@@ -29,7 +29,7 @@ log4j.appender.TraceFile.layout.ConversionPattern=%d %X{traceId} [%-40.40c] -%m%
 
 #Project defalult level with TraceFile appender
 log4j.logger.org.springside.examples.showcase=INFO,TraceFile
-log4j.logger.com.hesyun=DEBUG
+log4j.logger.com.chaos=DEBUG
 log4j.logger.org.springframework.data=DEBUG
 log4j.logger.org.springframework.cache=DEBUG
 #log4jdbc
