--- a/hecate-persist/pom.xml
+++ b/hecate-persist/pom.xml
@@ -25,5 +25,16 @@
 			<version>2.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.4.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
