--- a/hecate-service/src/main/resources/log4j.properties
+++ b/hecate-service/src/main/resources/log4j.properties
@@ -25,5 +25,5 @@ log4j.appender.TraceFile.MaxBackupIndex=5
 log4j.appender.TraceFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.TraceFile.layout.ConversionPattern=%d %X{traceId} [%-40.40c] -%m%n
 
-
+log4j.logger.com.chaos=DEBUG
 
