--- a/hecate-service/src/main/resources/config.properties
+++ b/hecate-service/src/main/resources/config.properties
@@ -33,3 +33,7 @@ redis.host=localhost
 #Port
 redis.port=16379
 
+###########################################
+#   百度地图配置
+###########################################
+baidumap.ak=gNlUkXxmDwr1qkRrEslKjkZv
