--- a/hecate-service/src/main/resources/config.properties
+++ b/hecate-service/src/main/resources/config.properties
@@ -31,7 +31,9 @@ redis.pool.testOnReturn=false
 #IP
 redis.host=localhost
 #Port
-redis.port=16379
+redis.port=16779
+
+redis.password=gbw123QWE
 
 ###########################################
 #   百度地图配置
